Add update and delete group functionalities